Completion of Gallery, addition of images to both gallery and footer, and changing of styling to ensure text was aligned and center panel completed. Main page complete.

--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@ body,
 
 .home {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   min-height: 300px;
@@ -99,6 +100,11 @@ body,
 
 .home h2 {
   animation: fadeIn 1.5s ease-out;
+  font-size: 24px;
+  margin-bottom: 30px;
+  max-width: 800px;
+  text-align: left;
+  margin-left: 550px;
 }
 
 main {
