--- a/src/components/main/footer.css
+++ b/src/components/main/footer.css
@@ -8,8 +8,9 @@
     padding-left: 20px;
 }
 
-.footer-img{
+.footer-logo{
     width: 30px;
     height: auto;
     margin-right: 10px;
+    display:block;
 }
