--- a/src/components/main/gallery.css
+++ b/src/components/main/gallery.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  padding: 30px;
+  gap: 30px;
+  padding: 40px;
   border: 2px solid black;
   border-radius: 20px;
   background-color: #f7f7f7;
   margin: 20px auto;
-  max-width: 1200px;
+  max-width: 95%px;
 }
 
 .quiz-card {
@@ -16,7 +16,7 @@
   border-radius: 12px;
   border: 1px solid #ccc;
   padding: 16px;
-  width: 220px;
+  width: 300px;
   text-align: center;
   transition: transform 0.3s ease;
 }
@@ -27,7 +27,8 @@
 
 .quiz-card img {
   width: 100%;
-  height: auto;
+  height: 200px;
+  object-fit: cover;
   border-radius: 8px;
 }
 
